--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login |CódigoMasters|</title>
+    <title>Login |Autobuces ADOL|</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
             <form method="POST" action="Comprueba_login.php">
                 <input type="text" placeholder="Usuario" name="email" required>
                 <input type="password" placeholder="Contraseña" name="password" required>
-                <a href="http://localhost/SistemaWeb/Mis%20Viajes.php?Correo=<?php @$correo = $_POST['email'];?>"><input type="submit" name="login" value="Iniciar Sesión"></a>
+                <a ><input type="submit" name="login" value="Iniciar Sesión"></a>
             </form>
         </div>
         
